syntax = "proto3";

package network;

option go_package = "/network";

import "msgs.proto";

enum NetworkMsg {
    // IBFTType are all iBFT related messages
    IBFTType = 0;
    // DecidedType is an iBFT specific message for broadcasting post consensus decided message with signatures
    DecidedType = 1;
    // SignatureType is an SSV node specific message for broadcasting post consensus signatures on eth2 duties
    SignatureType = 2;
    // SyncType is an SSV iBFT specific message that a node uses to sync up with other nodes
    SyncType = 3;
    // MpcInitType is an SSV DKG specific message that a node uses to initiate an MPC task
    MpcInitType = 4;
    // MpcProtocolType is an SSV DKG specific message that carries the protocol message of an MPC task
    MpcProtocolType = 5;
}

enum Sync {
  // GetHighestType is a request from peers to return the highest decided/ prepared instance they know of
  GetHighestType = 0;
  // GetInstanceRange is a request from peers to return instances and their decided/ prepared justifications
  GetInstanceRange = 1;
  // GetCurrentInstance is a request from peers to return their current running instance details
  GetLatestChangeRound = 2;
}

message SyncMessage {
  repeated proto.SignedMessage SignedMessages = 1;
  string FromPeerID                           = 2;
  repeated uint64 params                      = 3;
  bytes Lambda                                = 4;
  Sync Type                                   = 5;
  string error                                = 6;
}
